[gd_scene load_steps=3 format=2]

[ext_resource path="res://ReusableUI/Context/Context.gd" type="Script" id=1]
[ext_resource path="res://TextureBank/Stars/celestial_blank_small.png" type="Texture" id=2]

[node name="Context" type="PanelContainer"]
margin_right = 400.0
margin_bottom = 400.0
rect_min_size = Vector2( 0, 400 )
script = ExtResource( 1 )

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 393.0
margin_bottom = 393.0

[node name="ObjectName" type="Label" parent="VBox"]
margin_right = 386.0
margin_bottom = 14.0
text = "{OBJECT NAME}"
align = 1

[node name="Detail" type="HBoxContainer" parent="VBox"]
margin_top = 18.0
margin_right = 386.0
margin_bottom = 146.0

[node name="Texture" type="TextureRect" parent="VBox/Detail"]
margin_right = 128.0
margin_bottom = 128.0
texture = ExtResource( 2 )

[node name="DetailText" type="RichTextLabel" parent="VBox/Detail"]
margin_left = 132.0
margin_right = 386.0
margin_bottom = 128.0
size_flags_horizontal = 3

[node name="Panel" type="PanelContainer" parent="VBox"]
margin_top = 150.0
margin_right = 386.0
margin_bottom = 386.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MainText" type="RichTextLabel" parent="VBox/Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 379.0
margin_bottom = 229.0
size_flags_horizontal = 3
size_flags_vertical = 3
